Added sounds for the game result, added result modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,8 @@
   background: linear-gradient(rgba(255, 193, 7, 0.5), rgba(255, 193, 7, 0.9));
   box-shadow: 1px 1px 1px rgb(131, 22, 14);
 }
+
+.modal-bg {
+  background: linear-gradient(rgba(255, 193, 7, 0.5), rgba(255, 193, 7, 0.9));
+  border: 3px solid #ffc107;
+}
