--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@
   color: rgb(131, 22, 14);
   font-weight: bold;
   background: linear-gradient(rgba(255, 193, 7, 0.3), rgba(255, 193, 7, 0.7));
+  box-shadow: 1px 1px 1px rgb(131, 22, 14);
 }
 
 .wrongLetter {
@@ -48,4 +49,16 @@
   color: darkred;
   font-weight: Bold;
   font-size: large;
+}
+
+.bg-custom {
+  border: 3px solid #ffc107;
+  font-size: 1rem;
+  color: rgb(131, 22, 14);
+  font-weight: bold;
+  background: linear-gradient(rgba(255, 193, 7, 0.5), rgba(255, 193, 7, 0.9));
+  box-shadow: 1px 1px 1px rgb(131, 22, 14);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
 }
